framec_tests/language_specific/typescript/v3_outline/negative/test_action_with_frame.frm
@target typescript

system S {
    actions:
        fn doIt() {
            -> $Go(1)
        }
}
